fixed alignment on info page

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,12 +161,35 @@ a:visited {
   font-weight: 400;
 }
 .informationp {
-  margin-top: 27px;
+
+  padding-bottom: 10px;
+  color: #8a8683;
+}
+.informationq {
+margin-top: 50px;
+  color: #8a8683;
+}
+.informationr {
+  margin-top: 15px;
+  color: #8a8683;
+}
+.informations {
+  padding-top: 40px;
+   margin-top: 10px;
+  color: #8a8683;
+}
+.informationt {
+  margin-top: -1px;
+  color: #8a8683;
+}
+.informationu {
+  margin-top: 50px;
   color: #8a8683;
 }
 #informationdata {
   margin-top: 40px;
 }
+
 /* Slide 4 - Social*/
 #slide4 {
   background-image: -webkit-linear-gradient(top, rgba(17, 2, 49, 0.75), rgba(17, 2, 49, 0)), -webkit-linear-gradient(bottom left, #eb6670, #f67f7c, #f9ac97, #f1b79f, #e1bea7, #c3bcb0, #8aabb2, #4e95b2, #2588b6);
